--- a/src/main/resources/templates/member/signUp.html
+++ b/src/main/resources/templates/member/signUp.html
@@ -81,8 +81,7 @@
         </div>
         <div class="col-auto">
           <button type="button" id="passwordConfirmBtn" class="btn btn-primary"
-            style="display: none; margin-left:10px">비밀번호
-            사용하기</button>
+            style="display: none; margin-left:10px">비밀번호 사용하기</button>
         </div>
       </div>
 
@@ -124,8 +123,6 @@
           <input type="text" class="form-control" id="floatingPhoneCheck" placeholder="" maxlength="4"
             autocomplete="off" required>
           <label for="floatingPhoneCheck">인증번호 확인</label>
-          <button type="button" id="phoneCheckClearBtn" class="btn-close clear-btn"
-            onclick="clearInput('floatingPhoneCheck')" aria-label="Clear" tabindex="-1" style="display: none;"></button>
           <div id="timer" class="timer-text"></div>
         </div>
         <div class="col-auto">
@@ -179,8 +176,6 @@
         <input type="text" class="form-control" id="detailAddress" name="detailAddress" maxlength="50"
           autocomplete="off" placeholder="" readonly style="width: 70%;">
         <label for="detailAddress">상세 주소</label>
-        <button type="button" id="detailAddressClearBtn" class="btn-close clear-btn"
-          onclick="clearInput('detailAddress')" aria-label="Clear" tabindex="-1" style="display: none;"></button>
       </div>
     </div>
 
