--- a/src/main/resources/static/css/admin/adminMain.css
+++ b/src/main/resources/static/css/admin/adminMain.css
@@ -394,7 +394,7 @@ html, body {
 }
 
 
-.admin-box {
+.member-table {
   width: 700px;
   table-layout: fixed;
   border-collapse: collapse;
@@ -417,16 +417,16 @@ html, body {
   background-color: #EFEFEF;
 }
 
-.admin-box th:nth-child(1),
-.admin-box th:nth-child(2),
-.admin-box th:nth-child(3),
-.admin-box th:nth-child(4),
-.admin-box th:nth-child(5),
-.admin-box th:nth-child(6) {
+.member-table th:nth-child(1),
+.member-table th:nth-child(2),
+.member-table th:nth-child(3),
+.member-table th:nth-child(4),
+.member-table th:nth-child(5),
+.member-table th:nth-child(6) {
   background-color: #205375;
 }
 
-.admin-box td {
+.member-table td {
   padding: 12px 15px;
   text-align: center;
   font-size: 14px;
@@ -434,22 +434,22 @@ html, body {
   background-color: #EFEFEF;
 }
 
-.admin-box tr{
+.member-table tr{
   height: 40px;
 }
 
-.admin-box tr:nth-child(even) td {
+.member-table tr:nth-child(even) td {
   background-color: #ffffff;
 }
 
 
 
-.admin-box tr:hover td {
+.member-table tr:hover td {
   background-color: #a3a2a2;
 }
 
 
-.admin-box button {
+.member-table button {
   background-color: #205375; 
   color: #fff;
   border: none;
@@ -460,7 +460,7 @@ html, body {
   transition: background-color 0.3s ease;
 }
 
-.admin-box button:hover {
+.member-table button:hover {
   background-color: rgb(29, 30, 57);
 }
 
