선택 삭제 및 푸터 적용

--- a/src/main/resources/templates/searchBookPage/bookDetail.html
+++ b/src/main/resources/templates/searchBookPage/bookDetail.html
@@ -400,6 +400,7 @@
   <script th:inline="javascript">
     const pagination = /*[[${pagination}]]*/ {};
   </script>
+    <footer th:replace="~{common/footer :: footer}"></footer>
   <script src="/js/searchBookPage/detailBook.js"></script>
   <script src="https://kit.fontawesome.com/5eb8a8a2db.js" crossorigin="anonymous"></script>
 </body>
