--- a/src/main/resources/templates/admin/adminMain.html
+++ b/src/main/resources/templates/admin/adminMain.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>관리자 메인페이지</title>
+  <title>관리자 메인페이지 | PhantomBooks</title>
 
   <script src="https://kit.fontawesome.com/890489b5e8.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -107,7 +107,7 @@
       
           <div class="content-box2">
             <div class="graph">
-              <canvas id="myChart" width="5px" height="5px"></canvas>
+              <canvas id="myChart" width="720px" height="660px"></canvas>
             </div>
       
             <div class="memberList">
@@ -115,49 +115,49 @@
                 가입 회원현황
               </div>
   
-              <table class="member-table">
-                <thead>
-                  <tr>
-                    <th>회원번호</th>
-                    <th>회원 아이디</th>
-                    <th>가입일</th>
-                    <th>최근 로그인</th>
-                    <th>탈퇴 처리</th>
-                  </tr>
-                </thead>
-  
-                <tbody id="list">
-                  <tr>
-                    <th>2️⃣</th>
-                    <td>책이름</td>
-                    <td>매출량</td>
-                    <td>상승 / 하강 화살표</td>
-                  </tr>
-                  <tr>
-                    <th>3️⃣</th>
-                    <td>책이름</td>
-                    <td>매출량</td>
-                    <td>상승 / 하강 화살표</td>
-                  </tr>
-                  <tr>
-                    <th>4️⃣</th>
-                    <td>책이름</td>
-                    <td>매출량</td>
-                    <td>상승 / 하강 화살표</td>
-                  </tr>
-                  <tr>
-                    <th>5️⃣</th>
-                    <td>책이름</td>
-                    <td>매출량</td>
-                    <td>상승 / 하강 화살표</td>
-                  </tr>
-                </tbody>
-              </table>
-              <div class="pagination-area" >
-                <ul class="pagination">
-                
-                  
-                </ul>
+              <div class="table-container">
+                  <table class="member-table">
+                    <thead>
+                      <tr class="memberTableHead">
+                        <th>회원번호</th>
+                        <th>회원 아이디</th>
+                        <th>가입일</th>
+                        <th>최근 로그인</th>
+                        <th>탈퇴 처리</th>
+                      </tr>
+                    </thead>
+      
+                    <tbody id="list">
+                      <tr>
+                        <th>2️⃣</th>
+                        <td>책이름</td>
+                        <td>매출량</td>
+                        <td>상승 / 하강 화살표</td>
+                      </tr>
+                      <tr>
+                        <th>3️⃣</th>
+                        <td>책이름</td>
+                        <td>매출량</td>
+                        <td>상승 / 하강 화살표</td>
+                      </tr>
+                      <tr>
+                        <th>4️⃣</th>
+                        <td>책이름</td>
+                        <td>매출량</td>
+                        <td>상승 / 하강 화살표</td>
+                      </tr>
+                      <tr>
+                        <th>5️⃣</th>
+                        <td>책이름</td>
+                        <td>매출량</td>
+                        <td>상승 / 하강 화살표</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                <div class="pagination-area" >
+                  <ul class="pagination">
+                  </ul>
+                </div>
               </div>
             </div>
 
