--- a/src/main/resources/static/css/admin/adminMain.css
+++ b/src/main/resources/static/css/admin/adminMain.css
@@ -23,17 +23,81 @@ html, body {
   overflow: hidden; /* 스크롤 없애기 */
 }
 
-.header{
-  width: auto;
-  height: 70px;
-  margin: 0;
-
+/* 전체 헤더 스타일 */
+.header {
   display: flex;
-  flex-direction: row;
-
-  align-items: flex-start;
   justify-content: flex-end;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #EFEFEF; /* 부드러운 배경색 */
 }
+
+/* 로고 스타일 */
+.header .logo img {
+  width: 120px;
+  height: auto;
+}
+
+/* 기능 섹션 스타일 */
+.header .function {
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  gap: 20px;
+  margin-top: 15px;
+  
+}
+
+/* 관리자 담당 업무 스타일 */
+.header .adminName {
+  border: 2px solid #205375;
+  border-radius: 8px; 
+  padding: 3px 3px; 
+  background-color: #EFEFEF; 
+  font-size: 17px;
+  color: #205375; 
+  font-weight: bold;
+  text-align: center;
+  white-space: nowrap;
+  width: 100px; 
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* 비행기 버튼 스타일 */
+.header .chatting button {
+  background-color: #205375; 
+  color: #fff; 
+  font-size: 23px; 
+  padding: 10px;
+  border: none;
+  border-radius: 50%; 
+  cursor: pointer;
+  margin-right: 30px;
+}
+
+.header .chatting button:hover {
+  transform: scale(1.1); 
+}
+
+.header .chatting button:focus {
+  outline: 2px solid #a5d8ff; 
+}
+
+/* 모바일 반응형 */
+@media screen and (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .header .function {
+    justify-content: center;
+  }
+}
+
 /* 로고 */
 .logo {
   position: absolute;
@@ -142,6 +206,8 @@ html, body {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   min-width: 0; 
   max-width: 100%;
+  margin-top: 0px;
+  padding-top: 0px;
 }
 
 .dropdown {
@@ -332,6 +398,7 @@ html, body {
   justify-content: flex-start;
   align-items: center;
   height: 100px;
+  margin-top: -30px;
 }
 
 .sales > div{
@@ -348,9 +415,13 @@ html, body {
   height: 700px;
 }
 
+
 .graph{
-  width: 1000px;
-  height: 550px;
+  margin-top: 12px;
+  width: 800px;
+  height: 660px;
+  max-width: 800px;
+  max-height: 660px;
 }
 
 .salesRank{
@@ -387,11 +458,10 @@ html, body {
   font-weight: 600;
 }
 
-
-/* 테이블 스타일 */
-.memberList{
-  margin-right: 100px;
+#myChart{
+  width: 720px;
 }
+
 
 
 .member-table {
@@ -405,6 +475,10 @@ html, body {
   overflow: hidden;
 }
 
+.memberTableHead > th{
+  color: #EFEFEF;
+  font-weight: 300;
+}
 
 
 .admin-box th {
@@ -441,6 +515,8 @@ html, body {
 .member-table tr:nth-child(even) td {
   background-color: #ffffff;
 }
+
+
 
 
 
@@ -500,8 +576,9 @@ html, body {
 }
 
 .pagination a.current {
-  background-color: #205375;
+  background-color: rgb(29, 30, 57); 
   font-weight: bold; 
   cursor: pointer; 
+  transform: scale(1.2);
 }
 
