문의내역 줄바꿈한것도 보이도록 수정

--- a/src/main/resources/static/css/customer/inquiryUpdate.css
+++ b/src/main/resources/static/css/customer/inquiryUpdate.css
@@ -75,5 +75,9 @@ textarea {
 }
 
 .inquiry-content {
-  height: 200px;
+  white-space: pre-wrap;
+  min-height: 200px;
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
 }
