--- a/src/main/resources/templates/customer/inquiryDetail.html
+++ b/src/main/resources/templates/customer/inquiryDetail.html
@@ -18,7 +18,7 @@
 
     <div class="mainContent">
       <section class="board-detail" th:object="${inquiry}">
-        <h2 class="board-title" th:text="*{queryTitle}">게시글 제목</h2>
+        <h2 class="board-title" th:utext="*{queryTitle}">게시글 제목</h2>
         <div class="board-header">
 
           <p>
@@ -31,12 +31,12 @@
             </th:block>
           </p>
         </div>
-        <div class="inquiryDetail-content" th:utext="*{queryContent}">
+        <div class="inquiryDetail-content" th:utext="${inquiry.queryContent}">
           내용
         </div>
 
-        <div class="inquiryDetail-content">
-          <span>답글</span>
+        <div class="inquiryDetail-content2">
+          <span>관리자 답변</span>
           <p th:if="${inquiry.reply != null}" th:text="*{reply}"></p>
           <p th:if="${inquiry.reply == null}">작성된 답글이 없습니다.</p>
         </div>
