--- a/src/main/resources/templates/customer/inquiryUpdate.html
+++ b/src/main/resources/templates/customer/inquiryUpdate.html
@@ -20,7 +20,7 @@
                     <h4>제목</h4>
                     <input type="text" th:field="*{queryTitle}" placeholder="제목" class="input-title" />
                     <h4>내용</h4>
-                    <textarea th:field="*{queryContent}" placeholder="내용" class="inquiry-content"></textarea>
+                    <textarea th:field="*{queryContent}" placeholder="내용" class="inquiry-content" style="white-space: pre-wrap;" th:utext="*{queryContent}"></textarea>
                     <button class="inquiryUpdate-btn" type="submit">수정</button>
                 </form>
             </section>
