--- a/src/main/resources/templates/searchBookPage/bookDetail.html
+++ b/src/main/resources/templates/searchBookPage/bookDetail.html
@@ -88,7 +88,9 @@
               <i class="fas fa-shopping-cart" onclick="detailCart(this)" title="장바구니" id="shoppingCartId"></i>
 
               <!-- 찜 아이콘 -->
-              <i class="fas fa-heart" onclick="singleWishListBtn(this)" title="찜" id="heartId"></i>
+              <i class="fas fa-heart" 
+              onclick="singleWishListBtn(this)" title="찜"
+              id="heartId"></i>
             </div>
 
 
