--- a/src/main/resources/templates/searchBookPage/searchBook.html
+++ b/src/main/resources/templates/searchBookPage/searchBook.html
@@ -283,9 +283,10 @@
         
           <label class="buttonWish">
             <i class="fas fa-heart" id="heartId"
-            th:classappend="${wishList != null and #lists.contains(wishList, book.bookNo)} ? 'fa-solid' : 'fa-regular'"
+            th:class="${#lists.contains(wishList, book.bookNo)} ? 'fas fa-heart fa-solid' : 'far fa-heart fa-regular'"
              onclick="singleWishListBtn(this)" th:if="${session.loginMember != null}"
              title="찜" style="cursor: pointer; color: #e74c3c;"></i>
+             
           </label>
         </div>
       </div>
