강사님 확인 오류 수정 완료 공지사항 / FAQ / 새책 등록 필터 확인 필요

--- a/src/main/resources/templates/admin/adminNewBook.html
+++ b/src/main/resources/templates/admin/adminNewBook.html
@@ -96,6 +96,7 @@
             <th class="company">출판사</th>
             <th class="content">발주요청 부수</th>
             <th class="status">요청 가격</th>
+            <th class="requestYn">등록여부</th>
             <th class="button">등록하기</th>
           </tr>
         </thead>
@@ -125,6 +126,9 @@
               </td>
               <td th:text="*{requestPrice}">
                 N
+              </td>
+              <td th:text="*{requestYn}">
+                y/n
               </td>
               <td>
                 <button class="updateBtn" th:value="*{bookNo}">
