--- a/src/main/resources/templates/admin/adminNotice.html
+++ b/src/main/resources/templates/admin/adminNotice.html
@@ -97,7 +97,7 @@
             <th class="noticeId">글 번호</th>
             <th class="title">제목</th>
             <th class="createDate">작성일자</th>
-            <th class="updateDate">수정일자</th>
+            <th class="updateDate">조회수</th>
             <th class="status">활성화 상태</th>
             <th class="button">상태 변경</th>
           </tr>
@@ -114,7 +114,7 @@
             <tr th:each= "notice:${noticeList}"
                 th:object="${notice}">  
               <th>
-                <input type="checkbox" th:value="*{noticeId}">
+                <input type="checkbox" id="checkedNoticeId" th:value="*{noticeId}">
               </th>
               <td  th:text="*{noticeId}" >
                 FAQ 번호
@@ -149,7 +149,7 @@
       </table>
 
       
-      <div class="pagination-area" th:unless= "${#lists.isEmpty(faqList)}">
+      <div class="pagination-area" th:unless= "${#lists.isEmpty(noticeList)}">
         
         <ul class="pagination" th:object="${pagination}">
           
