--- a/src/main/resources/static/css/admin/adminMyPage.css
+++ b/src/main/resources/static/css/admin/adminMyPage.css
@@ -20,19 +20,83 @@ html, body {
   padding: 0;
   height: 100%;
   overflow: hidden; /* 스크롤 없애기 */
+  background-color: #efefef;
 }
 
-.header{
-  width: auto;
-  height: 70px;
-  margin: 0;
-
+.header {
   display: flex;
-  flex-direction: row;
-
-  align-items: flex-start;
   justify-content: flex-end;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #EFEFEF; /* 부드러운 배경색 */
 }
+
+/* 로고 스타일 */
+.header .logo img {
+  width: 120px;
+  height: auto;
+}
+
+/* 기능 섹션 스타일 */
+.header .function {
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  gap: 20px;
+  margin-top: 15px;
+  
+}
+
+/* 관리자 담당 업무 스타일 */
+.header .adminName {
+  border: 2px solid #205375;
+  border-radius: 8px; 
+  padding: 3px 3px; 
+  background-color: #EFEFEF; 
+  font-size: 17px;
+  color: #205375; 
+  font-weight: bold;
+  text-align: center;
+  white-space: nowrap;
+  width: 100px; 
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* 비행기 버튼 스타일 */
+.header .chatting button {
+  background-color: #205375; 
+  color: #fff; 
+  font-size: 23px; 
+  padding: 10px;
+  border: none;
+  border-radius: 50%; 
+  cursor: pointer;
+  margin-right: 30px;
+}
+
+.header .chatting button:hover {
+  transform: scale(1.1); 
+}
+
+.header .chatting button:focus {
+  outline: 2px solid #a5d8ff; 
+}
+
+/* 모바일 반응형 */
+@media screen and (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .header .function {
+    justify-content: center;
+  }
+}
+
 /* 로고 */
 .logo {
   position: absolute;
@@ -54,6 +118,8 @@ html, body {
 
   width: 500px;
 }
+
+
 
 
 /* 사이드바 css입니당 */
@@ -128,11 +194,14 @@ html, body {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin-bottom: 0;
 }
+
 
 .info-box{
   width: 1200px;
   height: 700px;
+  background-color: #EFEFEF;
 }
 
 /* 입력 필드의 오른쪽 여백을 늘려서 유효성 아이콘과 clear-btn이 겹치지 않도록 조정 */
@@ -148,4 +217,10 @@ div label {
 
 #updateBtn{
   margin-bottom: 100px;
+}
+
+.red {
+  color: red;
+  margin-bottom: 0;
+  align-items: center;
 }
