--- a/src/main/resources/templates/admin/adminMyPage.html
+++ b/src/main/resources/templates/admin/adminMyPage.html
@@ -6,7 +6,7 @@
   <title>관리자 정보 수정</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/admin/adminMyPage.css">
-  <script src="https://kit.fontawesome.com/890489b5e8.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/913e662347.js" crossorigin="anonymous"></script>
   
 </head>
 <body>
@@ -81,7 +81,7 @@
     <div class="content">
       <h2>내 정보 변경</h2>
       
-      <form action="/admin/adminManager/updateAdmin" method="POST" name="inputAdmin" id="info-box" class="info-box needs-validation mx-auto mt-4" style="width: 60%;" novalidate>
+      <form action="/admin/adminManager/updateAdmin" method="POST" name="inputAdmin" id="info-box" class="info-box needs-validation" style="width: 60%;" novalidate>
         <div>
           <!-- 비밀번호 입력, 요청사항 -->
           <div class="red col-1"> * 필수&nbsp;&nbsp; </div>
