--- a/src/main/resources/static/css/admin/adminPage.css
+++ b/src/main/resources/static/css/admin/adminPage.css
@@ -9,30 +9,98 @@
 /* 드롭다운 스타일 */
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
-*{
+* {
   background-color: #EFEFEF;
   font-family: 'Pretendard-Regular';
   box-sizing: border-box;
+  /* border: 1px solid black; */
 }
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   height: 100%;
-  overflow: hidden; /* 스크롤 없애기 */
+  overflow: hidden;
+  /* 스크롤 없애기 */
 }
 
-.header{
-  width: auto;
-  height: 70px;
-  margin: 0;
-
+/* 전체 헤더 스타일 */
+.header {
   display: flex;
-  flex-direction: row;
-
-  align-items: flex-start;
   justify-content: flex-end;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #EFEFEF;
+  /* 부드러운 배경색 */
 }
+
+/* 로고 스타일 */
+.header .logo img {
+  width: 120px;
+  height: auto;
+}
+
+/* 기능 섹션 스타일 */
+.header .function {
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  gap: 20px;
+  margin-top: 15px;
+
+}
+
+/* 관리자 담당 업무 스타일 */
+.header .adminName {
+  border: 2px solid #205375;
+  border-radius: 8px;
+  padding: 3px 3px;
+  background-color: #EFEFEF;
+  font-size: 17px;
+  color: #205375;
+  font-weight: bold;
+  text-align: center;
+  white-space: nowrap;
+  width: 100px;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* 비행기 버튼 스타일 */
+.header .chatting button {
+  background-color: #205375;
+  color: #fff;
+  font-size: 23px;
+  padding: 10px;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  margin-right: 30px;
+}
+
+.header .chatting button:hover {
+  transform: scale(1.1);
+}
+
+.header .chatting button:focus {
+  outline: 2px solid #a5d8ff;
+}
+
+/* 모바일 반응형 */
+@media screen and (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .header .function {
+    justify-content: center;
+  }
+}
+
 /* 로고 */
 .logo {
   position: absolute;
@@ -46,7 +114,7 @@ html, body {
   max-height: 80px;
 }
 
-.function{
+.function {
   display: flex;
   flex-direction: row;
 
@@ -55,16 +123,21 @@ html, body {
   width: 500px;
 }
 
+
+
 .content-box {
   display: flex;
   flex-direction: row;
   align-items: stretch;
   gap: 20px;
-  width: 100%; 
+  width: 100%;
   min-height: 100vh;
   height: 100%;
   overflow-x: hidden;
 }
+
+
+
 
 
 /* 사이드바 css입니당 */
@@ -86,6 +159,8 @@ html, body {
   font-weight: bold;
   color: #333;
   position: relative;
+  margin-top: 20px;
+  ;
 }
 
 .menu:hover {
@@ -120,23 +195,52 @@ html, body {
 }
 
 
-.title{
+/* 드롭다운 필터 css */
+.content {
+  flex-grow: 1;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+  background-color: #efefef;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  min-width: 0;
+  max-width: 100%;
+  margin-top: 0px;
+  padding-top: 0px;
 }
 
-#createAdmin{
-    font-size: 25px;
-    padding: 10px 10px;
-    background-color: #205375;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    width: 200px;
-  }
-  
-  
+.title {
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
+  width: 86%;
+  padding: 10px;
+}
+
+.title > h2{
+  min-width: 200px;
+}
+
+#createAdmin {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-right: 20px;
+  margin-left: 80%;
+  font-size: 20px;
+  padding: 10px 10px;
+  background-color: #205375;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  min-width: 200px;
+  height: fit-content;
+}
+
+
 #createAdmin:hover {
   background-color: rgb(29, 30, 57);
 }
@@ -161,8 +265,8 @@ html, body {
   text-align: center;
   font-size: 20px;
   text-transform: uppercase;
-  font-weight: 300; 
-  color: #fff; 
+  font-weight: 300;
+  color: #fff;
   background-color: #EFEFEF;
 }
 
@@ -179,27 +283,49 @@ html, body {
   padding: 12px 15px;
   text-align: center;
   font-size: 14px;
-  color: rgb(29, 30, 57); 
+  color: rgb(29, 30, 57);
   background-color: #EFEFEF;
 }
 
-.admin-box tr{
+.admin-box tr {
   height: 40px;
 }
+
+
+
+.admin th:nth-child(1) tr:nth-child(1) {
+  background-color: #205375;
+  color: #EfEfEf;
+}
+
+
 
 .admin-box tr:nth-child(even) td {
   background-color: #ffffff;
 }
 
-
-
 .admin-box tr:hover td {
   background-color: #a3a2a2;
 }
 
+/* 홀수 행의 첫 번째 th */
+.adminContent tr:nth-child(odd) th:first-child {
+  background-color: #EFEFEF;
+  color: rgb(29, 30, 57);
+  font-size: 14px;
+}
+
+/* 짝수 행의 첫 번째 th */
+.adminContent tr:nth-child(even) th:first-child {
+  background-color: #FFF; 
+  color: rgb(29, 30, 57);
+  font-size: 14px;
+}
+
+
 
 .admin-box button {
-  background-color: #205375; 
+  background-color: #205375;
   color: #fff;
   border: none;
   padding: 8px 12px;
@@ -213,12 +339,33 @@ html, body {
   background-color: rgb(29, 30, 57);
 }
 
+.adminContent tr > td:nth-child(3) > input{
+  width: 100px;
+  padding: 5px;
+  border: 1px solid #205375;
+  border-radius: 8px;
+}
+
+.adminContent tr > td:nth-child(4) > input{
+  width: 200px;
+  padding: 5px;
+  border: 1px solid #205375;
+  border-radius: 8px;
+}
+
+
+
+.modifyBtn{
+  margin-right: 10px;
+}
+
+
 /* 페이지네이션 스타일 */
 .pagination-area {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10px; 
+  margin-top: 10px;
   padding: 10px 0;
   background-color: #EFEFEF;
 }
@@ -228,7 +375,7 @@ html, body {
   padding: 0;
   margin: 0;
   display: flex;
-  gap: 10px; 
+  gap: 10px;
 }
 
 .pagination a {
@@ -236,20 +383,20 @@ html, body {
   padding: 8px 12px;
   text-decoration: none;
   background-color: #205375;
-  color: #fff; 
-  border-radius: 4px; 
+  color: #fff;
+  border-radius: 4px;
   font-size: 14px;
   font-weight: 600;
   transition: background-color 0.3s ease;
 }
 
 .pagination a:hover {
-  background-color: rgb(29, 30, 57); 
-  cursor: pointer; 
+  background-color: rgb(29, 30, 57);
+  cursor: pointer;
 }
 
 .pagination a.current {
   background-color: #205375;
-  font-weight: bold; 
-  cursor: pointer; 
+  font-weight: bold;
+  cursor: pointer;
 }
