--- a/src/main/resources/templates/admin/adminManager.html
+++ b/src/main/resources/templates/admin/adminManager.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>재고관리</title>
-  
-  <script src="https://kit.fontawesome.com/890489b5e8.js" crossorigin="anonymous"></script>
+  <title>재고관리 | PhantomBooks</title>
+
+  <script src="https://kit.fontawesome.com/913e662347.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link rel="stylesheet" href="/css/admin/adminManager.css">
 </head>
+
 <body>
   <section class="header">
     <div class="logo">
       <a href="/admin">
-          <img src="/images/고스트 코딩왕.png" alt="Logo">
+        <img src="/images/고스트 코딩왕.png" alt="Logo">
       </a>
-      
     </div>
-  
-   
+
+
     <div class="function">
       <!-- 관리자 담당 업무 -->
       <div class="adminName">
-        <div th:if= "${session.loginMember}"
-             th:text="${session.loginMember.adminName}">
+        <div th:if="${session.loginMember}" th:text="${session.loginMember.adminName}">
           담당
         </div>
       </div>
-  
+
       <!-- 채팅방 입장 아이콘 -->
       <div class="chatting">
         <button class="fa-solid fa-paper-plane" id="openPopup"></button>
+        <header th:replace="~{admin/adminChatting}"></header>
       </div>
     </div>
-    <header th:replace="~{admin/adminChatting}"></header>
 
   </section>
   <main>
@@ -45,12 +45,12 @@
             <li><a href="/admin/myPage">&nbsp;&nbsp;&nbsp;-&nbsp;내정보 변경</a></li>
             <li><a href="/admin">&nbsp;&nbsp;&nbsp;-&nbsp;회원 관리</a></li>
             <li>
-              <a href="/admin/adminManager" 
-                th:if= "${session.loginMember.name == '관리자' }">&nbsp;&nbsp;&nbsp;-&nbsp;관리자 계정 관리</a>
+              <a href="/admin/adminManager" th:if="${session.loginMember.name == '관리자' }">&nbsp;&nbsp;&nbsp;-&nbsp;관리자
+                계정 관리</a>
             </li>
           </ul>
         </h3>
-      
+
         <h3 class="menu">
           <i class="fa-solid fa-arrow-trend-up"></i>&nbsp;&nbsp;매출 및 일정 관리
           <ul class="submenu">
@@ -58,7 +58,7 @@
             <li><a href="/admin/schedule">&nbsp;&nbsp;&nbsp;-&nbsp;일정 관리</a></li>
           </ul>
         </h3>
-        
+
         <h3 class="menu">
           <i class="fa-solid fa-warehouse"></i>&nbsp;&nbsp;도서 관리
           <ul class="submenu">
@@ -78,76 +78,79 @@
         </h3>
       </div>
 
-  
-    <div class="content">
-      <div class="title">
-        <h1>재고관리<hr></h1>
-      </div>
-  
-      <div class="graph-box">
-        그래프 그리기(출판사별, 책종류별, 저자별, 가격별)
-        <label class="sort-dropdown">
-          <select id="sortSelect" >
+
+      <div class="content">
+        <div class="title">
+          <h1>재고관리
+            <hr>
+          </h1>
+        </div>
+
+        <div class="graph-box">
+          그래프 그리기(출판사별, 책종류별, 저자별, 가격별)
+          <label class="sort-dropdown">
+            <select id="sortSelect">
               <option value="all">전체</option>
               <option value="company">출판사</option>
               <option value="title">책 제목별</option>
-          </select>
-        </label>
-        <div>
-          <input type="text" id="searchText" class= "hidden">
-        </div>
-        <label class="view-dropdown">
-          <select id="viewSelect" >
+            </select>
+          </label>
+          <div>
+            <input type="text" id="searchText" class="hidden">
+          </div>
+          <label class="view-dropdown">
+            <select id="viewSelect">
               <option value="10">10개</option>
               <option value="20">20개</option>
               <option value="50">50개</option>
-          </select>
-        </label>
+            </select>
+          </label>
 
-        <div class="graph-section">
-          <canvas id="myChart" width="100px" height="20px"></canvas>
+          <div class="graph-section">
+            <canvas id="myChart" width="100px" height="20px"></canvas>
+          </div>
         </div>
+
+        <div class="list">
+          <table class="bookList">
+            <thead>
+              <tr>
+                <th>책 번호</th>
+                <th>책 제목</th>
+                <th>책 저자</th>
+                <th>출판사</th>
+                <th>잔여 수량 / 발주 수량</th>
+                <th>등록일자</th>
+                <th>등록 여부(Y/N)</th>
+                <th>
+                  등록여부 수정
+                </th>
+              </tr>
+            </thead>
+
+            <tbody id="bookList">
+              <tr>
+                <th>1</th>
+                <th>이것이 JAVA!</th>
+                <th>000</th>
+                <th>KH출판사</th>
+                <th>40 / 100</th>
+                <th>2024.11.11</th>
+                <th>N</th>
+                <th>
+                  <button>등록여부 수정</button>
+                </th>
+              </tr>
+
+            </tbody>
+          </table>
+        </div>
+
+        <div class="pagination">페이지네이션</div>
       </div>
-  
-      <div class="list">
-        <table class="bookList">
-          <thead>
-            <tr>
-              <th>책 번호</th>
-              <th>책 제목</th>
-              <th>책 저자</th>
-              <th>출판사</th>
-              <th>잔여 수량 / 발주 수량</th>
-              <th>등록일자</th>
-              <th>등록 여부(Y/N)</th>
-              <th>
-                등록여부 수정
-              </th>
-            </tr>
-          </thead>
+    </section>
 
-          <tbody id="bookList">
-            <tr>
-              <th>1</th>
-              <th>이것이 JAVA!</th>
-              <th>000</th>
-              <th>KH출판사</th>
-              <th>40 / 100</th>
-              <th>2024.11.11</th>
-              <th>N</th>
-              <th>
-                <button>등록여부 수정</button>
-              </th>
-            </tr>
-            
-          </tbody>
-        </table>
-      </div>
-
-      <div class="pagination">페이지네이션</div>
-    </div>
-  </section>
-
-  <script src="/js/admin/adminManager.js"></script>
+    <script src="/js/admin/adminManager.js"></script>
 </body>
+
 </html>
