--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -31,7 +31,7 @@
                     <div class="col-md-4 mb-3">
                         <h5 class="fw-bold mb-3">서비스</h5>
                         <ul class="list-unstyled">
-                            <li><a href="/support" class="text-light text-decoration-none">고객센터</a></li>
+                            <li><a href="/support" class="text-light text-decoration-none">고객지원</a></li>
                             <li><a href="/customer/qna" class="text-light text-decoration-none">FAQ</a></li>
                             <li><a href="/customer/inquiry" class="text-light text-decoration-none" onclick="checkLoginForInquiry(event)">1:1 문의하기</a></li>
                             <li><a href="/intellectual" class="text-light text-decoration-none">지식재산권 침해 신고</a></li>
