--- a/src/main/resources/static/css/customer/inquiryDetail.css
+++ b/src/main/resources/static/css/customer/inquiryDetail.css
@@ -77,6 +77,18 @@ body {
   border-radius: 8px;
   margin-bottom: 25px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  white-space: pre-wrap;
+}
+
+.inquiryDetail-content2 {
+  font-size: 16px;
+  line-height: 1.8;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  margin-bottom: 25px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 }
 
 .inquiryDetail-content span {
